# kona-v2

./: AGENTS.md  DEFENCE.md  METHODS_AND_MATERIALS-GREEK.md  METHODS_AND_MATERIALS-V2.md  METHODS_AND_MATERIALS.md  Makefile  ORAL_DEFENSE_SCRIPT.md  README.md  RESEARCH.md  pyproject.toml  run.py  test_log_output.py  verify_csv_consistency.py
data/: eea_burden_disease.csv  eea_emissions.csv
output/: AUDIT_REMEDIATION_REPORT.txt  ModelA_Emissions_PM25_coefficients.csv  ModelA_Emissions_PM25_summary.txt  ModelB_PM25_DALY_coefficients.csv  ModelB_PM25_DALY_summary.txt  ModelC_Sectoral_PM25_coefficients.csv  ModelC_Sectoral_PM25_summary.txt  ModelC_UNFCCC_PM25_coefficients.csv  ModelC_UNFCCC_PM25_summary.txt  ModelD_PM25_YLL_coefficients.csv  ModelD_PM25_YLL_summary.txt  ModelE_LaggedTotalEmissions_PM25_coefficients.csv  ModelE_LaggedTotalEmissions_PM25_sample_retention.txt  ModelE_LaggedTotalEmissions_PM25_summary.txt  ModelE_TwoWayFE_coefficients.csv  ModelE_TwoWayFE_summary.txt  ModelE_gate_check.txt  ModelF_Greece_UNFCCC_PM25_coefficients.csv  ModelF_Greece_UNFCCC_PM25_summary.txt  ModelG_TotalEmissions_PM25_coefficients.csv  ModelG_TotalEmissions_PM25_summary.txt  ModelJ_PM25_DALY_coefficients.csv  ModelJ_PM25_DALY_diagnostics.txt  ModelJ_PM25_DALY_summary.txt  ModelJ_PM25_YLL_coefficients.csv  ModelJ_PM25_YLL_diagnostics.txt  ModelJ_PM25_YLL_summary.txt  era5_out.txt  health_d_yll_merge.csv  panel_a.csv  panel_b_health.csv  panel_c.csv  panel_c_sectoral.csv  panel_d_mortality.csv  panel_e_fe.csv  panel_f_greece.csv  panel_materialization_log.txt  (+30 more)
src/: __init__.py  (+3 more)
(+3 files in other folders)
