[tool.poetry]
name = "kona"
version = "1.0.0"
description = "Integrated Environmental Dataset Analysis: WHO, EEA, UNFCCC"
authors = ["Data Analysis Team"]
readme = "README.md"
packages = [{include = "env_analysis.py"}, {include = "run.py"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
openpyxl = "^3.1.5"
pycountry = "^24.6.1"
linearmodels = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"